--- a/portfolio.html
+++ b/portfolio.html
@@ -33,8 +33,8 @@
     <header>
       <!-- Верхняя линия -->
       <nav>
-        <a href="index.html" span class="logoweb">Web</span>
-          <span class="logostudio"> Studio</span></a>
+        <span class="logoweb">Web</span>
+        <span class="logostudio"> Studio</span>
         <ul class="site-nav list">
           <li><a href="" class="text-link">Студия</a></li>
           <li><a href="" class="text-link">Портфолио</a></li>
@@ -46,8 +46,9 @@
           <a href="tel:+380961111111" class="text-link"> +38 096 111 11 11 </a>
         </li>
         <li>
-          <a href="mailto:info@devstudio.com" class="text-link">info@devstudio.com</a>
-          
+          <a href="mailto:info@devstudio.com" class="text-link"
+            >info@devstudio.com</a
+          >
         </li>
       </ul>
     </header>
@@ -112,14 +113,14 @@
         </ul>
       </section>
     </main>
-     <footer class="heading">
+    <footer class="heading">
       <a href=""
         ><span class="logoweb">Web</span
         ><span class="logostudioblack">Studio</span></a
       >
       <address>
         <ul>
-         <li>
+          <li>
             <a href="" class="text-footer">г. Киев, пр-т Леси Украинки, 26</a>
           </li>
           <li><a href="" class="text-communication">info@example.com</a></li>
