--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         >
         <ul class="site-nav list">
           <li><a href="" class="text-link">Студия</a></li>
-          <li><a href="portfolio.html" class="text-link">Портфолио</a></li>
+          <li><a href="./portfolio.html" class="text-link">Портфолио</a></li>
           <li><a href="" class="text-link">Контакты</a></li>
         </ul>
       </nav>
