--- a/index.html
+++ b/index.html
@@ -18,8 +18,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:ital,wght@0,500;0,700;0,900;1,400&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./css/styles.css" />
@@ -53,7 +55,7 @@
     <main>
       <section class="heading">
         <h1 class="hero-titele">Эффективные решения для вашего бизнеса</h1>
-        <button type="button" class="box">Заказать услугу</button>
+        <button type="button" class="button">Заказать услугу</button>
       </section>
       <!-- Особенности -->
 
@@ -95,9 +97,15 @@
       <section class="section">
         <h2 class="section-title">Чем мы занимаемся</h2>
         <ul>
-          <li><img src="image/box1.jpg" alt="работа версткой" /></li>
-          <li><img src="image/box2.jpg" alt="работа с дизайном" /></li>
-          <li><img src="image/box3.jpg" alt="работа с графикой" /></li>
+          <li>
+            <img src="image/box1.jpg" alt="работа версткой" width="370" />
+          </li>
+          <li>
+            <img src="image/box2.jpg" alt="работа с дизайном" width="370" />
+          </li>
+          <li>
+            <img src="image/box3.jpg" alt="работа с графикой" width="370" />
+          </li>
         </ul>
       </section>
       <!-- Команда -->
@@ -105,25 +113,25 @@
         <h2 class="section-commands">Наша команда</h2>
         <ul>
           <li>
-            <img src="image/img.jpg" alt="Игорь Демьяненко" />
+            <img src="image/img.jpg" alt="Игорь Демьяненко" width="270" />
             <h3 class="section-subject">Игорь Демьяненко</h3>
             <p class="section-text">Product Designer</p>
           </li>
 
           <li>
-            <img src="image/img1.1.jpg" alt="Ольга Репина" />
+            <img src="image/img1.1.jpg" alt="Ольга Репина" width="270" />
             <h3 class="section-subject">Ольга Репина</h3>
             <p class="section-text">Frontend Developer</p>
           </li>
 
           <li>
-            <img src="image/img1.2.jpg" alt="Николай Тарасов" />
+            <img src="image/img1.2.jpg" alt="Николай Тарасов" width="270" />
             <h3 class="section-subject">Николай Тарасов</h3>
             <p class="section-text">Marketing</p>
           </li>
 
           <li>
-            <img src="image/img1.3.jpg" alt="Михаил Ермаков" />
+            <img src="image/img1.3.jpg" alt="Михаил Ермаков" width="270" />
             <h3 class="section-subject">Михаил Ермаков</h3>
             <p class="section-text">UI Designer</p>
           </li>
